# qadata-rs

./: Cargo.toml  docker-compose.yaml  readme.md
.github/workflows/: rust.yml
arrow_deps/: Cargo.toml
arrow_deps/src/: lib.rs
examples/: equity_index.parquet  test_qaclient.rs
src/: lib.rs  main.rs  qaclickhouse.rs  qafetch.rs  qainfluxdb.rs  qamongo.rs  qaparquet.rs  tkread.rs
