[package]
name = "qadata-rs"
version = "0.1.0"
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.1"
bson = "0.14.0"
serde_json = "*"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] } # 序列化
chrono = "0.4.13"

stopwatch ="*"
clickhouse-rs = "*"
futures = "0.1.29"
tokio = "0.1.22"
tokio-timer = "0.2.11"
tokio-tls = { version = "0.2.1", optional = true }