[package]
name = "qadata-rs"
version = "0.1.0"
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "arrow_deps"]

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
arrow_deps = { path = "arrow_deps" }
mongodb = {version = "1.1.0", default-features = false,features = ["sync"]}
bson = "1.1.0"
serde_json = "*"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] } # 序列化
chrono = "0.4.13"
influxdb = { version = "0.3.0", features = ["derive"] }
stopwatch ="*"

mifi-rs = "0.3.0"